kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculator
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: calculator.info
      http:
        paths:
          - backend:
              service:
                name: calculator
                port:
                  number: 8080
            path: /
